adding doc info in the public page

--- a/locales/ca.json
+++ b/locales/ca.json
@@ -111,6 +111,9 @@
     "legal": {
         "title": "Términos legales",
         "contact": "contacto"
+    },
+    "documentation": {
+        "title": "Documentación"
     }
   }
 }
