--- a/locales/en.json
+++ b/locales/en.json
@@ -112,6 +112,9 @@
     "legal": {
         "title": "Legal terms",
         "contact": "contact"
+    },
+    "documentation": {
+        "title": "Documentation"
     }
   }
 }
