--- a/locales/gl.json
+++ b/locales/gl.json
@@ -112,6 +112,9 @@
     "legal": {
         "title": "Términos legales",
         "contact": "contacto"
+    },
+    "documentation": {
+        "title": "Documentación"
     }
   }
 }
