--- a/locales/ca.json
+++ b/locales/ca.json
@@ -22,7 +22,7 @@
     "poweredBy": "Funciona amb <strong><a href=\"__url__\" target=\"_blank\">__name__</a></strong>",
     "shareLink": "¡Tuitegi aquesta votació!",
     "votingSystem": "Sistema de votació",
-    "votings": {"plurality-at-large": "Voto en bloque o Escrutinio Mayoritario Plurinominal", "borda-nauru": "Borda de Nauru o Borda Dowdall (1/n)", "borda": "Borda Count (tradicional)", "pairwise-beta": "Comparación de pares (distribución beta)", "desborda2": "DesBorda2", "desborda": "DesBorda"}
+    "votings": {"plurality-at-large": "Vot en bloc o Escrutini Majoritari Plurinominal", "borda-nauru": "Borda de Nauru o Borda Dowdall (1/n)", "borda": "Borda Count (tradicional)", "pairwise-beta": "Comparación de pares (distribución beta)", "desborda2": "DesBorda2", "desborda": "DesBorda"}
   },
   "avElection": {
     "thisisATest": "<span class=\"glyphicon glyphicon-info-sign\" aria-hidden=\"true\"></span> <strong>Atenció!</strong> Aquesta és una votació PROVA",
@@ -51,7 +51,7 @@
     "resultsLastUpdated": "Última actualització: __date__",
     "resultsSummary": "Resum d'escrutini",
     "totalNumberOfVotes": "Total de vots:",
-    "validVotes": "Vots válids:",
+    "validVotes": "Vots vàlids:",
     "blankVotes": "Vots en blanc:",
     "nullVotes": "Vots nuls:",
     "stateNotPublished": "Ho sentim. No es poden mostrar els resultats perquè encara no han estat publicats.",
